methods.picture.MethodsPictureLarge.scala.error
Erreur de compilation :
MethodsPictureLarge:23: error: identifier expected but ')' found.
    setCouleurBrosse(Color.)
                           ^MethodsPictureLarge:26: error: identifier expected but ')' found.
    setCouleurBrosse(Color.)
                           ^MethodsPictureLarge:30: error: identifier expected but ')' found.
  setCouleurBrosse(Color.)
                         ^MethodsPictureLarge:38: error: identifier expected but ')' found.
    setCouleurBrosse(Color.)
                           ^MethodsPictureLarge:41: error: identifier expected but ')' found.
    setCouleurBrosse(Color.)
                           ^MethodsPictureLarge:45: error: identifier expected but ')' found.
  setCouleurBrosse(Color.)
                         ^